# Research-PostureAndSustainmentOptimization

./: .gitignore  BLOG.md  DESIGN_DOC.md  PAPER_DRAFT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
paper/: main.tex
results/tables/: exp1_metrics.tex  exp1_sensitivity.tex  exp1_significance.tex
scripts/: experiment1.py  experiment1_greedy.py  experiment2.py  experiment2_cev_vs_greedy.py  experiment3.py  experiment3_adversarial.py  experiment4.py  experiment5.py  run_demo.py
src/postureopt/: __init__.py  core.py  data.py  drsp.py  evaluate.py  stats.py
tests/: test_core.py  test_data.py  test_drsp.py  test_evaluate.py  test_exp3.py  test_exp4.py  test_exp5.py  test_experiment3.py  test_experiments.py  test_infrastructure.py  test_stats.py
